[package]
name = "nomad-api"
version = "0.1.0"
authors = ["Isan Rivkin <isanrivkin@gmail.com>"]
edition = "2018"
description = "API for interacting Nomad hashicorp"
keywords = ["hashicorp","nomad", "devops", "scheduler"]
categories = ["api", "devops", "scheduler"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Isan-Rivkin/nomad-api"
homepage = "https://github.com/Isan-Rivkin/nomad-api"

[dependencies]
